# hubris

./: Cargo.toml
.github/workflows/: dist.yml
app/gemini-bu/: app.toml
app/gemini-bu-rot/: app.toml
app/gimlet/: rev-b.toml
app/gimlet-rot/: app.toml
app/gimletlet/: app-sidecar-emulator.toml  app.toml
app/lpc55xpresso/: app.toml
app/psc/: rev-a.toml
app/rot-carrier/: app.toml
app/sidecar/: rev-a.toml
chips/lpc55/: chip.toml
drv/auxflash-server/src/: main.rs
drv/fpga-api/src/: lib.rs
drv/i2c-devices/src/: at24csw080.rs
drv/ignition-api/: Cargo.toml  build.rs
drv/ignition-api/src/: lib.rs
drv/ignition-server/: Cargo.toml
drv/ignition-server/src/: main.rs
drv/lpc55-gpio-api/src/: lib.rs
drv/lpc55-romapi/src/: lib.rs
drv/lpc55-spi-server/src/: main.rs
drv/lpc55-spi/src/: lib.rs
drv/lpc55-sprot-server/: Cargo.toml
drv/lpc55-sprot-server/src/: handler.rs  main.rs
drv/sidecar-front-io/: README.md  build.rs  sidecar_qsfp_x32_controller.bit
drv/sidecar-front-io/src/: transceivers.rs
drv/sidecar-mainboard-controller/: Cargo.toml  build.rs  ignition_controller.json  sidecar_mainboard_controller.bit
drv/sidecar-mainboard-controller/src/: ignition.rs  lib.rs
drv/sidecar-seq-server/: Cargo.toml
drv/sidecar-seq-server/src/: front_io.rs  main.rs
drv/spi-msg/src/: lib.rs
drv/stm32h7-spi-rot-server/src/: main.rs
drv/transceivers-api/: Cargo.toml  build.rs
drv/transceivers-server/: Cargo.toml  build.rs
idl/: ignition.idol  transceivers.idol
sys/abi/src/: lib.rs
task/hiffy/: Cargo.toml
task/net/: Cargo.toml  build.rs
(+13 files in other folders)
