[package]
name = "drv-ignition-api"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib"}
drv-fpga-api = {path = "../../drv/fpga-api"}
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
num-traits = {version = "0.2.12", default-features = false}
zerocopy = "0.6.1"

[build-dependencies]
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}
