[package]
name = "drv-ignition-server"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
ringbuf = {path = "../../lib/ringbuf" }
drv-fpga-api = {path = "../fpga-api"}
drv-ignition-api = {path = "../ignition-api"}
drv-sidecar-mainboard-controller = {path = "../../drv/sidecar-mainboard-controller"}
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
cfg-if = "1"
num-traits = { version = "0.2.12", default-features = false }
zerocopy = "0.6.1"

[build-dependencies]
build-util = {path = "../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-ignition-server"
test = false
bench = false
